# botdudoan

./: .replit  DEPLOYMENT_GUIDE.md  app.py  bot_handler.py  config.py  deployment_requirements.txt  language_service.py  main.py  models.py  pgsoft_scraper.py  prediction_service.py  pyproject.toml  slot_game_service.py  translations_en.json  translations_th.json  translations_vi.json  translations_zh.json  user_languages.json  wsgi.py
templates/: game_info.html  index.html
